--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -11,7 +11,12 @@ ul, a {
    background-color: orange;
     height:60px;
     width:100%;
-   
+    font-family: 'Georgia', Times, Times New Roman, serif ;
+    
+}
+
+a:hover {
+    background-color:red;
 }
 
 ul {
@@ -26,13 +31,14 @@ li {
 
 #name {
     font-size: 50px;
-    background-color: green;
+    background-color: rgb(236, 100, 46);
     margin-left: 60px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 #img1 {
     height:100px;
-    width: 100px;
+    width: 110x;
     float:left;
 }
 
@@ -47,6 +53,7 @@ body {
     margin-left: 60px;
     border: solid black 1px;
     padding-left: 10px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 footer {
@@ -81,6 +88,27 @@ footer {
 }
 
 #submit {
-    background-color: green;
+    background-color: rgb(236, 100, 46);
     color: black;
+
+}
+
+
+html, {
+    position:fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+}
+
+
+#portfolio {
+    background-color: lightblue;
+    height: 300px;
+    width: 86%;
+    margin-left: 60px;
+    border: solid black 1px;
+    padding-left: 10px;
+
 }
