--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -40,6 +40,8 @@ h1 {
     float:left;
     margin-left: 1px;
     margin-top: 50px;
+
+ 
     
 }
 
@@ -52,6 +54,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     margin:0;
     height: 100%;
+    background-color: #8099AE;
  
  
 }
@@ -93,10 +96,12 @@ a {
 }
 
 .body-content {
-    background-color: #8099AE;
+    background-color: rgb(110, 133, 151);
     width: 850px;
     margin: 0 auto;
     margin-top: 15px;
+    border: 1px solid #8099AE;
+    margin-bottom: 15px;
 
 }
 
